Modify ptlsim to support DRAMSim2

--- a/config/default.conf
+++ b/config/default.conf
@@ -10,10 +10,7 @@ import:
   - l1_cache.conf
   - l2_cache.conf
   - moesi.conf
-
-memory:
-  dram_cont:
-    base: simple_dram_cont
+  - memory.conf
 
 machine:
   # Use run-time option '-machine [MACHINE_NAME]' to select
