--- a/config/l1_cache.conf
+++ b/config/l1_cache.conf
@@ -33,3 +33,40 @@ cache:
     base: l1_128K
     params:
         SIZE: 256K
+
+  l1_32K_xeon:
+    base: wb_cache
+    params:
+      SIZE: 32K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 8
+      LATENCY: 4
+      READ_PORTS: 2
+      WRITE_PORTS: 1
+  l1_32K_xeon_mesi:
+    base: mesi_cache
+    params:
+      SIZE: 32K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 8
+      LATENCY: 4
+      READ_PORTS: 2
+      WRITE_PORTS: 1
+  l1_32K_I_xeon:
+    base: wb_cache
+    params:
+      SIZE: 32K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 4
+      LATENCY: 2
+      READ_PORTS: 2
+      WRITE_PORTS: 1
+  l1_32K_I_xeon_mesi:
+    base: mesi_cache
+    params:
+      SIZE: 32K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 4
+      LATENCY: 2
+      READ_PORTS: 2
+      WRITE_PORTS: 1
