--- a/config/l2_cache.conf
+++ b/config/l2_cache.conf
@@ -32,3 +32,22 @@ cache:
     base: l2_2M_mesi
     params:
       SIZE: 1M
+
+  l2_256K_xeon:
+    base: wb_cache
+    params:
+      SIZE: 256K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 8
+      LATENCY: 6
+      READ_PORTS: 2
+      WRITE_PORTS: 2
+  l2_256K_xeon_mesi:
+    base: mesi_cache
+    params:
+      SIZE: 256K
+      LINE_SIZE: 64 # bytes
+      ASSOC: 8
+      LATENCY: 6
+      READ_PORTS: 2
+      WRITE_PORTS: 2
