--- a/config/ooo_core.conf
+++ b/config/ooo_core.conf
@@ -13,3 +13,17 @@ core:
     base: ooo # Here ooo_2 will inherit params of ooo defined above
     params:
       ISSUE_WIDTH: 6
+
+  xeon:
+    base: ooo 
+    params:
+      ISSUE_WIDTH: 5
+      COMMIT_WIDTH: 4
+      ROB_SIZE: 128
+      ISSUE_Q_SIZE: 36
+      ALU_FU_COUNT: 6
+      FPU_FU_COUNT: 6
+      LOAD_FU_COUNT: 1
+      STORE_FU_COUNT: 1
+      LOAD_Q_SIZE: 48
+      STORE_Q_SIZE: 32
