--- a/qemu/SConstruct
+++ b/qemu/SConstruct
@@ -1,6 +1,8 @@
 
 # SCons File to compile QEMU
 
+import os;
+
 Import('qemu_env')
 Import('qemu_target')
 Import('ptlsim_lib')
@@ -45,6 +47,12 @@ if int(debug):
             env.Append(CCFLAGS = '-O0')
 else:
     env.Append(CCFLAGS = '-O3 -march=native')
+
+dramsim_path= ARGUMENTS.get('dramsim', '%s/DRAMSim2' % (os.environ['HOME'] ))
+if os.path.isdir(dramsim_path):
+    env.Append(LIBS='dramsim')
+    env.Append(LINKFLAGS='-L%s'%dramsim_path)
+    env.Append(LINKFLAGS='-Wl,-rpath=%s'%dramsim_path);
 
 google_perftools = ARGUMENTS.get('gperf', None)
 if google_perftools != None:
