Tools and Scripts Modify
Add some tools for checkpoints creation
Modifiy creating and running python scripts

--- a/util/util.cfg
+++ b/util/util.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-marss_dir = /home/gaoke/marss
-util_dir = /home/gaoke/marss/util
+marss_dir = /home/gaoke/dramsim4marss/marss
+util_dir = /home/gaoke/dramsim4marss/marss/util
 img_dir = /home/gaoke/full_system_images
 
 memory = 4G 
@@ -72,12 +72,12 @@ simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.log
 
 # Spec2006 Benchmarks
 [suite spec2006]
-checkpoints = lbm, 1lbm4c,2lbm4c, 1bzip22c,1lbm2c, 4lbm4c, 8lbm8c, 16lbm16c, 1lbm1zeusmp2c, 1zeusmp2c, 1lbm1bzip22c
+checkpoints = lbm, 1lbm4c,2lbm4c,2lbm4c2, 1bzip22c,1lbm2c, 4lbm4c, 8lbm8c, 16lbm16c, 1lbm1zeusmp2c, 1zeusmp2c, 1lbm1bzip22c
 
 [run spec2006]
 suite = spec2006 
 images = %(img_dir)s/ubuntu-natty.spec2006.qcow2
-out_dir = /home/gaoke/DRAMSim2/results/spec2006/%(machine_tag)s_%(bench)s
+out_dir = ../DRAMSim2/results/spec2006/%(machine_tag)s_%(bench)s
 
 simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   -stats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.stats
