--- a/util/util.cfg
+++ b/util/util.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
-marss_dir = /home/gaoke/dramsim4marss/marss
-util_dir = /home/gaoke/dramsim4marss/marss/util
-img_dir = /home/gaoke/full_system_images
+marss_dir = /home/kgoh/marss
+util_dir = /home/kgoh/marss/util
+img_dir = /home/kgoh/full_system_images
 
 memory = 4G 
 
@@ -51,97 +51,43 @@ to = gaoke@ict.ac.cn
 #       as shown in 'simconfig' option below.
 #
 
-# *ls-test* is used to test this script
-[suite ls-test]
-checkpoints = ls
-
-[run ls-test]
-suite = ls-test
-images = %(img_dir)s/ubuntu-natty.qcow2
-out_dir = /home/gaoke/DRAMSim2/results/ls-test/%(machine_tag)s_%(bench)s
-
-simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.log
-  -stats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.stats
-  -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.yaml
-  -machine xeon_multi_core 
-  %(default_simconfig)s
-  -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
-  -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.%(scheme)s.ini
-  -dramsim-results-dir-name ls-test/%(machine_tag)s_%(bench)s.%(scheme)s
-
 # Spec2006 Benchmarks
 [suite spec2006]
-checkpoints = lbm, 1lbm4c,2lbm4c,2lbm4c2, 1bzip22c,1lbm2c, 4lbm4c, 8lbm8c, 16lbm16c, 1lbm1zeusmp2c, 1zeusmp2c, 1lbm1bzip22c
+checkpoints = 1perl1c,1bzip1c,1gcc1c,1bwaves1c,1gamess1c,1mcf1c,1zeusmp1c,1gromacs1c,1cactusADM1c,1leslie3d1c,1namd1c,1gobmk1c,1deal1c,1soplex1c,1povray1c,1calculix1c,1hmmer1c,1sjeng1c,1gems1c,1quantum1c,1h2641c,1tonto1c,1lbm1c,1omnetpp1c,1astar1c,1wrf1c,1sphinx1c,1xalanc1c
 
 [run spec2006]
 suite = spec2006 
-images = %(img_dir)s/ubuntu-natty.spec2006.qcow2
-out_dir = ../DRAMSim2/results/spec2006/%(machine_tag)s_%(bench)s
+images = %(img_dir)s/spec2006.qcow2
+out_dir = ../DRAMSim2/results/spec2006/%(machine_tag)s_%(bench)s.%(scheme)s
 
 simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   -stats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.stats
   -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.yaml
   -machine xeon_multi_core 
-  -stopinsns 7000m 
-  -time-stats-logfile time_stats_filename_goh
-  -time-stats-period 100K
+  -stopinsns 1000m 
   %(default_simconfig)s
   -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
   -dramsim-pwd ../DRAMSim2
   -dramsim-system-ini-file system.%(scheme)s.ini
-  -dramsim-results-dir-name spec2006/%(machine_tag)s_%(bench)s
+  -dramsim-results-dir-name spec2006/%(machine_tag)s_%(bench)s.%(scheme)s
 
 [suite parsec-2.1]
 checkpoints = blackscholes, bodytrack, ferret, freqmine,
         swaptions, fluidanimate, vips, x264, canneal, dedup,
         streamcluster, facesim, raytrace
+
 [run parsec-2.1]
 suite = parsec-2.1 
-simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.log
+images = %(img_dir)s/parsecROI.qcow2
+out_dir = ../DRAMSim2/results/parsec-2.1/%(machine_tag)s_%(bench)s.%(scheme)s
+
+simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   -stats %(out_dir)s/%(machine_tag)s_%(bench)s.stats
-  -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.yaml
+  -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.yaml
   -machine xeon_multi_core 
+  -stopinsns 1000m 
   %(default_simconfig)s
   -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
   -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.ini
-  -dramsim-results-dir-name %(machine_tag)s_%(bench)s
-
-
-[suite terasort-test]
-checkpoints = terasort-16 
-[run terasort-test]
-suite = terasort-test
-simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.log
-  -stats %(out_dir)s/%(machine_tag)s_%(bench)s.stats
-  -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.yaml
-  -machine xeon_multi_core 
-  %(default_simconfig)s
-  -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
-  -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.ini
-  -dramsim-results-dir-name %(machine_tag)s_%(bench)s
-
-[suite mapreduce-terasort]
-checkpoints = terasort-1, terasort-4, terasort-8,terasort-12,
-              terasort-16,terasort-20,terasort-24,terasort-28,
-              terasort-32,terasort-36,terasort-40,terasort-44,
-              terasort-44,terasort-48,terasort-52,terasort-56,
-              terasort-60,terasort-64
-#checkpoints = ls,terasort,wordcount 
-#checkpoints = blackscholes,streamcluster 
-
-[run mapreduce-test]
-suite = mapreduce-terasort
-simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.log
-  -stats %(out_dir)s/%(machine_tag)s_%(bench)s.stats
-  -yamlstats %(out_dir)s/%(machine_tag)s_%(bench)s.yaml
-  -machine ooo_2_th 
-  %(default_simconfig)s
-  -dramsim-device-ini-file ini/DDR3_micron_8M_8B_x16_sg15.ini
-  -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.ini
-  -dramsim-results-dir-name %(machine_tag)s_%(bench)s
-
-
+  -dramsim-system-ini-file system.%(scheme)s.ini
+  -dramsim-results-dir-name parsec-2.1/%(machine_tag)s_%(bench)s.%(scheme)s
