Mode create_checkpoint.py and util.cfg for 1threads4c

--- a/util/util.cfg
+++ b/util/util.cfg
@@ -53,7 +53,8 @@ to = gaoke@ict.ac.cn
 
 # Spec2006 Benchmarks
 [suite spec2006]
-checkpoints = 1perl1c,1bzip1c,1gcc1c,1bwaves1c,1gamess1c,1mcf1c,1zeusmp1c,1gromacs1c,1cactusADM1c,1leslie3d1c,1namd1c,1gobmk1c,1deal1c,1soplex1c,1povray1c,1calculix1c,1hmmer1c,1sjeng1c,1gems1c,1quantum1c,1h2641c,1tonto1c,1lbm1c,1omnetpp1c,1astar1c,1wrf1c,1sphinx1c,1xalanc1c
+checkpoints = 1perl1c,1bzip1c,1gcc1c,1bwaves1c,1gamess1c,1mcf1c,1zeusmp1c,1gromacs1c,1cactusADM1c,1leslie3d1c,1namd1c,1gobmk1c,1deal1c,1soplex1c,1povray1c,1calculix1c,1hmmer1c,1sjeng1c,1gems1c,1quantum1c,1h2641c,1tonto1c,1lbm1c,1omnetpp1c,1astar1c,1wrf1c,1sphinx1c,1xalanc1c,
+              1perl4c,1bzip4c,1gcc4c,1mcf4c,1cactusADM4c,1leslie3d4c,1namd4c,1deal4c,1soplex4c,1povray4c,1calculix4c,1hmmer4c,1sjeng4c,1quantum4c,1lbm4c,1omnetpp4c
 
 [run spec2006]
 suite = spec2006 
