Add initial batch run scripting, vis2csv.py, and Modify create_checkpoints and util.cfg to increase more parsec checklists

--- a/util/util.cfg
+++ b/util/util.cfg
@@ -73,9 +73,15 @@ simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   -dramsim-results-dir-name spec2006/%(machine_tag)s_%(bench)s.%(scheme)s
 
 [suite parsec-2.1]
-checkpoints = blackscholes, bodytrack, ferret, freqmine,
-        swaptions, fluidanimate, vips, x264, canneal, dedup,
-        streamcluster, facesim, raytrace
+checkpoints = 1blackscholes4c,1bodytrack4c,1canneal4c,1ferret4c,1fluidanimate4c,1freqmine4c,1streamcluster4c,1vips4c,1x2644c,
+              4blackscholes4c,4bodytrack4c,4canneal4c,4ferret4c,4fluidanimate4c,4freqmine4c,4streamcluster4c,4vips4c,4x2644c,
+              1blackscholes8c,1bodytrack8c,1canneal8c,1ferret8c,1fluidanimate8c,1freqmine8c,1streamcluster8c,1vips8c,1x2648c,
+              4blackscholes8c,4bodytrack8c,8canneal8c,4ferret8c,4fluidanimate8c,4freqmine8c,4streamcluster8c,4vips8c,4x2648c,
+              8blackscholes8c,8bodytrack8c,8canneal8c,8ferret8c,8fluidanimate8c,8freqmine8c,8streamcluster8c,8vips8c,8x2648c,
+              1blackscholes16c,1bodytrack16c,1canneal16c,1ferret16c,1fluidanimate16c,1freqmine16c,1streamcluster16c,1vips16c,1x26416c,
+              4blackscholes16c,4bodytrack16c,4canneal16c,4ferret16c,4fluidanimate16c,4freqmine16c,4streamcluster16c,4vips16c,4x26416c,
+              8blackscholes16c,8bodytrack16c,8canneal16c,8ferret16c,8fluidanimate16c,8freqmine16c,8streamcluster16c,8vips16c,8x26416c,
+              16blackscholes16c,16bodytrack16c,16canneal16c,16ferret16c,16fluidanimate16c,16freqmine16c,16streamcluster16c,16vips16c,16x26416c
 
 [run parsec-2.1]
 suite = parsec-2.1 
