--- a/util/util.cfg
+++ b/util/util.cfg
@@ -69,12 +69,11 @@ simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   %(default_simconfig)s
   -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
   -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.%(scheme)s.ini
+  -dramsim-system-ini-file sysini/system.%(scheme)s.ini
   -dramsim-results-dir-name spec2006/%(machine_tag)s_%(bench)s.%(scheme)s
-
 [suite parsec-2.1]
 checkpoints = 1blackscholes4c,1bodytrack4c,1canneal4c,1ferret4c,1fluidanimate4c,1freqmine4c,1streamcluster4c,1vips4c,1x2644c,
-              4blackscholes4c,4bodytrack4c,4canneal4c,4ferret4c,4fluidanimate4c,4freqmine4c,4streamcluster4c,4vips4c,4x2644c,
+              4blackscholes4c,4bodytrack4c,4canneal4c,4dedup4c,4facesim4c,4ferret4c,4fluidanimate4c,4freqmine4c,4raytrace4c,4streamcluster4c,4swaptions4c,4vips4c,4x2644c,
               1blackscholes8c,1bodytrack8c,1canneal8c,1ferret8c,1fluidanimate8c,1freqmine8c,1streamcluster8c,1vips8c,1x2648c,
               4blackscholes8c,4bodytrack8c,8canneal8c,4ferret8c,4fluidanimate8c,4freqmine8c,4streamcluster8c,4vips8c,4x2648c,
               8blackscholes8c,8bodytrack8c,8canneal8c,8ferret8c,8fluidanimate8c,8freqmine8c,8streamcluster8c,8vips8c,8x2648c,
@@ -96,5 +95,5 @@ simconfig = -logfile %(out_dir)s/%(machine_tag)s_%(bench)s.%(scheme)s.log
   %(default_simconfig)s
   -dramsim-device-ini-file ini/DDR3_micron_16M_8B_x8_sg15.ini
   -dramsim-pwd ../DRAMSim2
-  -dramsim-system-ini-file system.%(scheme)s.ini
+  -dramsim-system-ini-file sysini/system.%(scheme)s.ini
   -dramsim-results-dir-name parsec-2.1/%(machine_tag)s_%(bench)s.%(scheme)s
