Mod xeon.conf to remove LLC, add some spec2006 checkpoints
add emulaiton python file and get_mpki bash file

--- a/config/xeon.conf
+++ b/config/xeon.conf
@@ -91,9 +91,9 @@ machine:
         option:
           private: true
           last_private: true
-      - type: l3_12M_xeon
-        name_prefix: L3_
-        insts: 1
+      # - type: l3_12M_xeon
+      #   name_prefix: L3_
+      #   insts: 1
     memory:
       - type: dram_cont
         name_prefix: MEM_
@@ -113,9 +113,9 @@ machine:
               L2_$: UPPER
             - L1_D_$: LOWER
               L2_$: UPPER2
-            - L3_0: LOWER
-              MEM_0: UPPER
+            # - L3_0: LOWER
+            #   MEM_0: UPPER
       - type: split_bus
         connections:
             - L2_*: LOWER
-              L3_0: UPPER
+              MEM_0: UPPER
