--- a/util/util.cfg
+++ b/util/util.cfg
@@ -57,7 +57,10 @@ checkpoints = 1perl1c,1bzip1c,1gcc1c,1bwaves1c,1gamess1c,1mcf1c,1zeusmp1c,1groma
               1perl4c,1bzip4c,1gcc4c,1mcf4c, 1gobmk4c, 1h2644c, 1astar4c, 1xalanc4c,
               1cactusADM4c,1leslie3d4c,1namd4c,1deal4c,1soplex4c,1povray4c,1calculix4c,1hmmer4c,1sjeng4c,1quantum4c,1lbm4c,1omnetpp4c,
               1bwaves4c, 1gamess4c, 1milc4c, 1zeusmp4c, 1gromacs4c, 1named4c,
-              1gems4c, 1tonto4c, 1wrf4c, 1sphinx4c
+              1gems4c, 1tonto4c, 1wrf4c, 1sphinx4c,
+			  A4c,B4c,C4c,D4c,E4c,F4c,G4c,H4c,I4c,J4c,
+			278c,
+			  4quantum4c
 
 [run spec2006]
 suite = spec2006 
